card align fixed

--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -20,4 +20,6 @@
     width: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
+    object-position: top;
+    margin-bottom: 10px;
 }
